fixed our layout issues

--- a/apps/rick/src/app/app.component.scss
+++ b/apps/rick/src/app/app.component.scss
@@ -1,18 +1,26 @@
 :host {
-  --top-bottom-margin: 1.5rem;
-  --combined-height: calc(var(--top-bottom-margin) * 2);
+  --top-bottom-padding: 1.2rem;
 
-  display: flex;
-  flex-direction: column;
-  max-width: 80%;
-  margin: var(--top-bottom-margin) auto;
-  height: calc(100% - var(--combined-height));
-  overflow: hidden;
+  display: grid;
+  max-width: 95%;
+  margin: 0 auto;
+  padding: var(--top-bottom-padding) 0;
+  height: 100%;
+
+  grid-template-columns: 1fr;
+  grid-template-rows: min-content 1fr;
+  grid-auto-flow: row;
+  grid-template-areas:
+    'header'
+    'content';
+}
+
+.header {
+  grid-area: header;
 }
 
 .content {
-  height: 100%;
-  width: 100%;
+  grid-area: content;
   padding: 0.25rem;
   overflow: auto;
 }
